; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_tiff.c_get_geokey_name.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_tiff.c_get_geokey_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VERT = common dso_local global i32 0, align 4
@vert = common dso_local global i32 0, align 4
@name = common dso_local global i32 0, align 4
@PROJ = common dso_local global i32 0, align 4
@proj = common dso_local global i32 0, align 4
@GEOG = common dso_local global i32 0, align 4
@geog = common dso_local global i32 0, align 4
@CONF = common dso_local global i32 0, align 4
@conf = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_geokey_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_geokey_name(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @VERT, align 4
  %4 = load i32, i32* @vert, align 4
  %5 = load i32, i32* @name, align 4
  %6 = call i32 @RET_GEOKEY(i32 %3, i32 %4, i32 %5)
  %7 = load i32, i32* @PROJ, align 4
  %8 = load i32, i32* @proj, align 4
  %9 = load i32, i32* @name, align 4
  %10 = call i32 @RET_GEOKEY(i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* @GEOG, align 4
  %12 = load i32, i32* @geog, align 4
  %13 = load i32, i32* @name, align 4
  %14 = call i32 @RET_GEOKEY(i32 %11, i32 %12, i32 %13)
  %15 = load i32, i32* @CONF, align 4
  %16 = load i32, i32* @conf, align 4
  %17 = load i32, i32* @name, align 4
  %18 = call i32 @RET_GEOKEY(i32 %15, i32 %16, i32 %17)
  ret i8* null
}

declare dso_local i32 @RET_GEOKEY(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
